# pip-rs

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMPLETION_CHECKLIST.md  Cargo.toml  FINAL_SUMMARY.md  FOLDER_CLEANUP.md  FOLDER_STRUCTURE.md  HANG_FIX.md  INDEX.md  LAYOUT_COMPARISON.md  LAYOUT_SUMMARY.md  LIST_COMMAND_FIX.md  LIST_OUTDATED_FEATURE.md  MIGRATION.md  MIGRATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_TUNING.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_REPORT.md  PROGRESS.md  README.md  RELEASE_CHECKLIST.md  STATUS.md  TODO.md  UI_IMPROVEMENTS.md  UPGRADE_VERIFICATION.md
Formula/: pip-rs.rb
benches/: benchmarks.rs
crates/pip-rs-core/: Cargo.toml
crates/pip-rs-core/src/: errors.rs  lib.rs
crates/pip-rs-core/src/cache/: disk_cache.rs
crates/pip-rs-core/src/config/: config.rs  mod.rs
crates/pip-rs-core/src/installer/: egg_link_handler.rs  site_packages.rs
crates/pip-rs-core/src/models/: mod.rs
crates/pip-rs-core/src/network/: client.rs  index.rs  lazy_client.rs  mod.rs  pypi.rs
crates/pip-rs-core/src/resolver/: dependency_cache.rs  lockfile.rs  resolver.rs
crates/pip-rs-core/src/utils/: archive_detector.rs  color.rs  find_links_tracker.rs  mod.rs  pep691_handler.rs  progress.rs  security.rs
docs/: ARCHITECTURE.md  CHECKLIST.md  CLEANUP.md  CONFLICT_DETECTION.md  DEPLOYMENT.md  FIXES.md  INDEX.md  MAINTAINABILITY_IMPROVEMENTS.md  OPTIMIZATION_PHASE1_COMPLETE.md  OPTIMIZATION_QUICK_START.md  OPTIMIZATION_STATUS.md  OUTDATED_FEATURE.md  PARALLEL_UPGRADES.md  PERFORMANCE_IMPROVEMENTS.md  PHASE2_REPORT.md  PHASE3_REPORT.md  PHASE4_REPORT.md  SECURITY_AUDIT.md  SPEED_IMPROVEMENTS.md  VERIFICATION.md  index.html
docs/architecture/: ORGANIZATION.md
docs/archive/: PHASE2_COMPLETE.md
docs/features/: INCREMENTAL_OUTDATED.md  MODULARIZATION_AND_ANIMATION.md  PROGRESS_INDICATION.md  REALTIME_STREAMING.md  UPDATE_COMMAND_FINAL.md  UPGRADE_COMMAND.md
docs/fixes/: PACKAGE_NAME_PARSING_FIX.md  PEP440_FIX_SUMMARY.md  VERSION_COMPARISON_ANALYSIS.md
docs/guides/: ANALYSIS_SUMMARY.md  FEATURE_IMPLEMENTATIONS.md  FINAL_MIGRATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  MEDIUM_PRIORITY_COMPLETE.md  MIGRATION_COMPLETE.md  MIGRATION_COMPLETE_FINAL.md  MIGRATION_GUIDE.md  MIGRATION_SUMMARY.md  PHASE_8_COMPLETE.md  PHASE_8_PROGRESS.md  PIP_MAIN_ANALYSIS.md  SETUP.md  UPGRADE_PROGRESS_FEEDBACK.md
docs/optimization/: CODE_QUALITY.md  FAST_UPDATE_OPTIMIZATION.md  OPTIMIZATION_FIXES.md  OPTIMIZATION_IMPROVEMENTS.md  OPTIMIZATION_PHASE2_PROGRESS.md  PERFORMANCE_SUMMARY.md
docs/phases/: PHASE6_SUMMARY.md  PHASE7_COMPLETE.md  PHASE7_COMPLETION.md  PHASE7_DEBUG.md  PHASE7_FINAL.md  PHASE7_INDEXES.md  PHASE7_LOCKFILE.md  PHASE7_PROGRESS.md  PHASE8_COMPLETE.md  PHASE8_PLAN.md  PHASE8_PROGRESS.md  PHASE8_SUMMARY.md
docs/reference/: DOCUMENTATION_INDEX.md  PARITY_ANALYSIS.md
scripts/: update-formula.sh
src/: errors.rs  lib.rs  main.rs
src/cache/: disk_cache.rs  mod.rs  package_cache.rs
src/cli/: mod.rs  parser.rs
src/commands/: check.rs  completion.rs  debug.rs  download.rs  freeze.rs  install.rs  list.rs  lock.rs  mod.rs  search.rs  show.rs  uninstall.rs  upgrade.rs
src/commands/upgrade/: conflict.rs  default_impl.rs  detector.rs  handler.rs  installer.rs  mod.rs  progress.rs  traits.rs
src/config/: config.rs  mod.rs  pyproject.rs
src/installer/: editable.rs  editable_cache.rs  entry_point.rs  installer.rs  mod.rs  site_packages.rs  wheel.rs
src/models/: installation_report.rs  marker.rs  metadata.rs  mod.rs  package.rs  requirement.rs
src/network/: client.rs  index.rs  mod.rs  pypi.rs
src/resolver/: candidate_selector.rs  direct_url.rs  extras.rs  mod.rs  resolver.rs
src/utils/: benchmark.rs  color.rs  environment_markers.rs  hash.rs  mod.rs  performance.rs  requirements_parser.rs  svn_handler.rs  validation.rs  version.rs
tests/: coverage_tests.rs  e2e_tests.rs  insta_tests.rs  integration_tests.rs  upgrade_function_test.rs  upgrade_verification_test.rs  version_comparison_test.rs
tests/snapshots/: insta_tests__version_comparisons_snapshot.snap
