[package]
name = "pip-rs"
version = "1.0.0-rc.1"
edition = "2021"
description = "A high-performance Rust implementation of pip - the Python package installer"
license = "Apache-2.0"
authors = ["pip-rs contributors"]
repository = "https://github.com/yourusername/pip-rs"
homepage = "https://github.com/yourusername/pip-rs"
documentation = "https://github.com/yourusername/pip-rs/blob/main/README.md"
readme = "README.md"
keywords = ["pip", "package", "manager", "python", "rust"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI and argument parsing
clap = { version = "4.4", features = ["derive"] }

# HTTP and networking
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
bytes = "1.5"

# JSON handling and repair
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Markdown parsing
pulldown-cmark = "0.9"

# File and path handling
walkdir = "2"
tempfile = "3"
zip = "0.6"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Path expansion
shellexpand = "3.0"
glob = "0.3"

# Performance optimizations
lazy_static = "1.4"
futures = "0.3"
dirs = "5.0"

# Async traits
async-trait = "0.1"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Version parsing (PEP 440)
pep440 = "0.2"

# Hash verification
sha2 = "0.10"
sha1 = "0.10"
md5 = "0.7"

# Color output
colored = "2.0"

# Testing
insta = { version = "1.34", features = ["yaml"] }

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "pip_rs"
path = "src/lib.rs"

[[bin]]
name = "pip-rs"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
