[package]
name = "pip-rs-core"
version = "0.1.0"
edition = "2024"
description = "Core logic for pip-rs"
license = "Apache-2.0"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "io-util", "fs", "sync", "macros"] }
bytes = "1.5"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
tempfile = "3"
zip = "0.6"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
shellexpand = "3.0"
glob = "0.3"
lazy_static = "1.4"
once_cell = "1.19"
futures = "0.3"
dirs = "5.0"
indicatif = "0.17"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
pep440 = "0.2"
sha2 = "0.10"
sha1 = "0.10"
md5 = "0.7"
colored = "2.0"
